add exec plugin; update readme